added visual to the form area

--- a/index.html
+++ b/index.html
@@ -41,34 +41,34 @@
         <p>Let's do this</p>
         <form action="post">
           <div>
-            <div class="field">
-              <label for="firstName">First Name</label
-              ><input type="text" name="firstName" id="" />
-            </div>
-            <div class="field">
-              <label for="lastName">Last Name</label
-              ><input type="text" name="lastName" id="" />
-            </div>
+            <!-- FirstName -->
+            <label for="firstName">First Name</label>
+            <input type="text" name="firstName" id="" />
           </div>
           <div>
-            <div class="field">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="" />
-            </div>
-            <div class="field">
-              <label for="phone">Phone Number</label>
-              <input type="tel" name="phone" id="" />
-            </div>
+            <!-- LastName -->
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastName" id="lastName" />
           </div>
           <div>
-            <div class="field">
-              <label for="password">Password</label>
-              <input type="password" name="password" id="" />
-            </div>
-            <div class="field">
-              <label for="confPassword">Password</label>
-              <input type="password" name="confPassword" id="" />
-            </div>
+            <!-- Email -->
+            <label for="email" l>Email</label>
+            <input type="text" name="email" id="email" />
+          </div>
+          <div>
+            <!-- Phone -->
+            <label for="phone">Phone Number</label>
+            <input type="number" name="phone" id="phone" />
+          </div>
+          <div>
+            <!-- Password -->
+            <label for="password">Password</label>
+            <input type="text" name="password" id="password" />
+          </div>
+          <div>
+            <!-- ConfirmPassword -->
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="text" name="confirmPassword" id="confirmPassword" />
           </div>
         </form>
       </div>
