changed message area text to h2, and customized it on css

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <!-- FORM -->
     <div class="formSide">
       <div class="message">
-        <p>
+        <h2>
           This is not a real online service! You know you need something like
           this in your life to help you realize your deepest dreams. Sign up now
           to get started.
-        </p>
-        <p>You know you want to.</p>
+        </h2>
+        <h2>You know you want to.</h2>
       </div>
       <div class="area">
-        <p>Let's do this</p>
+        <h2>Let's do this</h2>
         <form action="post">
           <div>
             <!-- FirstName -->
