fixed create account button spelling and size

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </form>
       </div>
       <div class="confirm">
-        <button>Create Acount</button>
+        <button>Create Account</button>
         <div class="haveAccount">
           <p>Already have an account?</p>
           <a href="">Log in</a>
